# master_agentic_ai_52w

./: .gitignore  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
storage/: faiss_index.index  id_map.json
w01_10/: 01_web_request.py  03_hello_agent.py  06_llm_response_cycle.py  07_finetuning_adapter_rag.py  09_Vector_database_setup.py  11_chain_of_thoght_prompting.py  12_react_reasoning_agent.py  13_planning_reactiveloop_agent  14_tools_agentic_ai.py  15_custom_agent_tool.py  16_tools_with_safety_controls.py  17_single_multi_agent.py  18_agent_communication.py  19_agent_emergent_behaviour.py  _learning.md  api_mini_project.py  episodic_memory.py  first_gpt_experiment.py  memory_module_basic.py  python_crash_lab.ipynb  tasks.json  tokens_embeddings.py
w01_10/tools/: url_summarizer.py
