[project]
name = "master-agentic-ai-52w"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "chromadb>=1.5.5",
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.14",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "pinecone>=8.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
    "transformers>=5.4.0",
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.13.3",
    "cachetools>=7.1.4",
    "langchain-core>=1.4.9",
]
